# lenscan

./: README.md
.github/workflows/: docker.yml  indexer.yml
api/: README.md  docker-compose.yml  lenscan.conf
bq-syncer/: .gitignore  README.md  export.py  pyproject.toml  sample.py  sync.py  sync_parquet.py
dashboard/: .env  .env.example  .env.sample  .gitignore  Dockerfile  README.md  biome.json  bun.lockb  codegen.yml  constants.ts  next.config.js  package-lock.json  package.json  prettier.config.cjs  release.sh  schema.sql  tailwind.config.js  tsconfig.json
dashboard/apollo/: httpLink.ts  index.ts
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: 404.tsx  ChartView.tsx  EventTableView.tsx  KpiCard.tsx  KpiCardGrid.tsx  Layout.tsx  Navbar.tsx  Pagination.tsx  ProfileStatCardGrid.tsx  ProfileSummaryCard.tsx  ProfileTableView.tsx  ProfilesTableView.tsx  PublicationsTableView.tsx  StatCard.tsx  StatCardGrid.tsx  TableView.tsx  app-revenue-cards.tsx  apps-summary.tsx  comment.tsx  daily-app-revenue.tsx  daily-profile-revenue.tsx  daily-profile-stats.tsx  daily-publication-stats.tsx  dailyapps.tsx  dau-stats.tsx  dynamic-react-json.tsx  error.tsx  footer.tsx  icons.tsx  lenny-card.tsx  lens-avatar.tsx  linkable-tabs.tsx  links-grid.tsx  loader.tsx  loading.tsx  main-nav.tsx  mirror.tsx  (+32 more)
indexer/: .gitignore  Dockerfile  README.md  config.sample.toml  db.go  event_parser.go  fetcher.go  go.mod  go.sum  main.go  model.go  parser.go  schema.sql
momoka-indexer/: .env.example  .gitignore  Dockerfile  README.md  index.ts  package.json  prisma.ts
(+263 files in other folders)
